<resources>
    <string name="app_name">没有你的天气</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="widgetset">桌面组件设置</string>
    <string name="widgetcolor">字体颜色</string>
    <string name="othersetting">显示风格</string>
    <string name="alarm">预警：</string>
    <string name="tab">\t\t\t\t</string>
    <string name="space">\t</string>
    <string name="nextStep">OK</string>
    <string name="guide1">点击城市，打开设置界面</string>
    <string name="guide2">点击右侧，查看今日天气</string>
    <string name="guide3">点击可切换城市</string>
    <string name="guide4">长按可修改城市</string>
    <string name="clickEvent">点击事件</string>
    <string name="time">时间</string>
    <string name="date">日期</string>
    <string name="weather">天气</string>
    <string name="sysApp">系统应用</string>
    <string name="show">显示</string>
    <string name="hide">隐藏</string>
    <string name="tips_norain">未来15天，无雨</string>
    <string name="noword">隐约雷鸣 阴霾天空 但盼风雨来 能留你在此</string>
    <string name="change_city">城市管理</string>
    <string name="input_hint">输入城市名</string>
    <string name="night_model">夜间模式</string>
    <string name="close">关闭</string>
    <string name="open">开启</string>
    <string name="change_style">切换布局</string>
    <string name="default_style">默认</string>
    <string name="classical_style">经典</string>
    <string name="show_nl">显示农历</string>
    <string name="layout_setting">布局</string>
    <string name="widget_text_color">字体颜色</string>


</resources>
