<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardCornerRadius="@dimen/cardRadius">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/item_text_size"
        android:background="@color/background"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_style"
                android:textColor="@color/main_text"
                android:textSize="@dimen/setting_title_size" />

            <RadioGroup
                android:id="@+id/groupStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkedButton="@+id/styleDefault"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/styleDefault"
                    android:button="@null"
                    android:textColor="@drawable/radio_text_click"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_small"
                    android:text="@string/default_style" />

                <RadioButton
                    android:id="@+id/styleClassical"
                    android:button="@null"
                    android:textColor="@drawable/radio_text_click"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_small"
                    android:text="@string/classical_style" />

            </RadioGroup>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="显示农历"
                android:textColor="@color/main_text"
                android:textSize="@dimen/setting_title_size" />

            <RadioGroup
                android:id="@+id/groupNL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkedButton="@+id/lunarClose"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/lunarClose"
                    android:button="@null"
                    android:textColor="@drawable/radio_text_click"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_small"
                    android:text="@string/hide" />

                <RadioButton
                    android:id="@+id/lunarOpen"
                    android:button="@null"
                    android:textColor="@drawable/radio_text_click"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_small"
                    android:text="@string/show" />

            </RadioGroup>
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>
