<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardCornerRadius="@dimen/cardRadius">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="@dimen/padding_small"
            android:paddingTop="@dimen/padding_small">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clickEvent"
                android:textColor="@color/main_text"
                android:textSize="@dimen/setting_title_size" />

            <RadioGroup
                android:id="@+id/groupCE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_small"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/ce1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small"
                    android:button="@null"
                    android:text="@string/time"
                    android:textColor="@drawable/radio_text_click"
                    android:textSize="@dimen/setting_title_size" />

                <RadioButton
                    android:id="@+id/ce2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small"
                    android:button="@null"
                    android:text="@string/date"
                    android:textColor="@drawable/radio_text_click"
                    android:textSize="@dimen/setting_title_size" />

                <RadioButton
                    android:id="@+id/ce3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small"
                    android:button="@null"
                    android:text="@string/weather"
                    android:textColor="@drawable/radio_text_click"
                    android:textSize="@dimen/setting_title_size" />

            </RadioGroup>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/sysApp"
                android:textColor="@color/main_text"
                android:textSize="@dimen/setting_title_size" />

            <RadioGroup
                android:id="@+id/groupSysApp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_small"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/sysApp_hide"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small"
                    android:button="@null"
                    android:text="@string/hide"
                    android:textColor="@drawable/radio_text_click"
                    android:textSize="@dimen/setting_title_size" />

                <RadioButton
                    android:id="@+id/sysApp_show"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small"
                    android:button="@null"
                    android:text="@string/show"
                    android:textColor="@drawable/radio_text_click"
                    android:textSize="@dimen/setting_title_size" />

            </RadioGroup>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/widgetToolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </androidx.appcompat.widget.Toolbar>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ProgressBar
                    android:id="@+id/loadingApp"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/app_info_list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/padding_small"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/item_appinfo" />

            </FrameLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>
