<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardCornerRadius="@dimen/cardRadius"
    app:cardElevation="0dp">

    <LinearLayout
        android:id="@+id/mainView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/padding_small"
            android:paddingTop="@dimen/padding_small">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_city"
                android:textColor="@color/main_text"
                android:textSize="@dimen/setting_title_size" />

            <RadioGroup
                android:id="@+id/groupCity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginBottom="@dimen/margin_small"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/city1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_small"
                    android:button="@null"
                    android:textColor="@drawable/radio_text_click"
                    android:textSize="@dimen/setting_title_size"
                    tools:text="ip" />

                <RadioButton
                    android:id="@+id/city2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/setting_title_size"
                    android:button="@null"
                    android:textColor="@drawable/radio_text_click"
                    android:textSize="@dimen/setting_title_size"
                    tools:text="北京" />

                <RadioButton
                    android:id="@+id/city3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/setting_title_size"
                    android:button="@null"
                    android:textColor="@drawable/radio_text_click"
                    android:textSize="@dimen/setting_title_size"
                    tools:text="上海" />


            </RadioGroup>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/modifyLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/margin_small"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:visibility="gone"
                tools:visibility="visible">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/modify"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/background"
                    android:hint="@string/input_hint"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textColor="@color/main_text"
                    android:textSize="@dimen/item_text_size" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/padding_small">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/night_model"
                android:textColor="@color/main_text"
                android:textSize="@dimen/setting_title_size" />

            <RadioGroup
                android:id="@+id/groupDN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkedButton="@+id/nightModelClose"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/nightModelClose"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_small"
                    android:button="@null"
                    android:text="@string/close"
                    android:textColor="@drawable/radio_text_click" />

                <RadioButton
                    android:id="@+id/nightModelOpen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_small"
                    android:button="@null"
                    android:text="@string/open"
                    android:textColor="@drawable/radio_text_click" />

            </RadioGroup>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_small"
            android:paddingLeft="@dimen/padding_small">

            <TextView
                android:id="@+id/othersetting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/othersetting"
                android:textColor="@drawable/other_text_click"
                android:textSize="@dimen/setting_title_size" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_small"
            android:orientation="vertical"
            android:paddingLeft="@dimen/padding_small">

            <TextView
                android:id="@+id/widgetset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/widgetset"
                android:textColor="@drawable/other_text_click"
                android:textSize="@dimen/setting_title_size" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>
